--- a/src/index.html
+++ b/src/index.html
@@ -20,18 +20,15 @@
           <button type="button" class="refresh-btn btn">Refresh</button>
         </div>
         <ul id="scores" class="scores">
-          <li class="list-score">Boaz: 110</li>
-          <li class="list-score">Boaz: 110</li>
-          <li class="list-score">Boaz: 110</li>
-          <li class="list-score">Boaz: 110</li>
+         
         </ul>
       </div>
       <div>
         <h3 class="score-title">Add your score</h3>
-        <form action="add-form">
-          <input type="text" name="name" placeholder="Name" />
-          <input type="text" name="score" placeholder="Scores" />
-          <button type="button" class="add-btn btn">Submit</button>
+        <form id="form" action="add-form">
+          <input id="user" type="text" name="name" placeholder="Name" />
+          <input id="score" type="text" name="score" placeholder="Scores" />
+          <button type="button" id="add" class="add-btn btn">Submit</button>
         </form>
       </div>
     </div>
