Add and remove functionality added

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
       <div class="table">
         <div class="score">
           <h2 class="score-title">Recent scores</h2>
-          <button type="button" class="refresh-btn btn">Refresh</button>
+          <button id="refresh" type="button" class="refresh-btn btn">Refresh</button>
         </div>
-        <ul id="scores" class="scores">
+        <ul id="list" class="list">
          
         </ul>
       </div>
