Fix the display and refesh problem

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
           <input id="user" type="text" name="name" placeholder="Name" />
           <input id="score" type="text" name="score" placeholder="Scores" />
           <button type="button" id="add" class="add-btn btn">Submit</button>
+          <h4 id="alart"></h4>
         </form>
       </div>
     </div>
